force-app/main/default/objects/Paper__c/Paper__c.object-meta.xml
<CustomObject>
    <description>CRM Management of white papers and other assets.</description>
    <label>Paper</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Papers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>