force-app/main/default/objects/Paper__c/fields/Allow_Duplicates__c.field-meta.xml
<CustomField>
    <fullName>Allow_Duplicates__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Disables automatic non-qual of subsequent downloads from the same email.</description>
    <inlineHelpText
  >Disables automatic non-qual of subsequent downloads from the same email.</inlineHelpText>
    <label>Allow Duplicates</label>
    <type>Checkbox</type>
</CustomField>