force-app/main/default/objects/Paper__c/fields/Allow_Private_Sector__c.field-meta.xml
<CustomField>
    <fullName>Allow_Private_Sector__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >If checked, this box prevents private sector paper downloads from automatically being marked &quot;non-qual&quot; via the workflow rule: Paper Download - Non-Qual Private Sector</description>
    <inlineHelpText
  >If checked, this box prevents private sector paper downloads from automatically being marked &quot;non-qual&quot;</inlineHelpText>
    <label>Allow Private Sector</label>
    <type>Checkbox</type>
</CustomField>