force-app/main/default/objects/Paper__c/fields/Asset_Title__c.field-meta.xml
<CustomField>
    <fullName>Asset_Title__c</fullName>
    <description>The full title of the asset.</description>
    <inlineHelpText
  >The full title of the asset. (Must edit in OneForm).</inlineHelpText>
    <label>Display Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>