force-app/main/default/objects/Paper__c/fields/Asset_Topics__c.field-meta.xml
<CustomField>
    <fullName>Asset_Topics__c</fullName>
    <label>Asset Topics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1:1 and BYOD</fullName>
            </value>
            <value>
                <fullName>Administrative Services</fullName>
            </value>
            <value>
                <fullName>Advocacy and Government Affairs</fullName>
            </value>
            <value>
                <fullName>Artificial Intelligence</fullName>
            </value>
            <value>
                <fullName>Budget, Finance and HR</fullName>
            </value>
            <value>
                <fullName>Buildings and Facilities</fullName>
            </value>
            <value>
                <fullName>Citizen Engagement</fullName>
            </value>
            <value>
                <fullName>Civic Innovation</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Constituent Experience</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Data and Analytics</fullName>
            </value>
            <value>
                <fullName>Data and Analytics Education</fullName>
            </value>
            <value>
                <fullName>Digital Workflows</fullName>
            </value>
            <value>
                <fullName>Diversity, Equity and Inclusion</fullName>
            </value>
            <value>
                <fullName>Education Technology</fullName>
            </value>
            <value>
                <fullName>eGovernment</fullName>
            </value>
            <value>
                <fullName>Election Technology</fullName>
            </value>
            <value>
                <fullName>Emergency Management</fullName>
            </value>
            <value>
                <fullName>Emerging Tech</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Finance Health and Human Services</fullName>
            </value>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>Health and Human Services</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>IoT and Smart Cities</fullName>
            </value>
            <value>
                <fullName>IT Infrastructure</fullName>
            </value>
            <value>
                <fullName>IT Modernization</fullName>
            </value>
            <value>
                <fullName
        >Policy and Management Recruitment and Retention</fullName>
                <label>Policy and Management Recruitment and Retention</label>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Public Works</fullName>
            </value>
            <value>
                <fullName>Smart Cities</fullName>
            </value>
            <value>
                <fullName>Social and Mobile</fullName>
            </value>
            <value>
                <fullName>Special Districts</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Sustainability and Environment</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Utilities, Water, Waste and Energy</fullName>
            </value>
            <value>
                <fullName>Workforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>