force-app/main/default/objects/Paper__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <description>What type of asset is this?</description>
    <inlineHelpText>What type of asset is this?</inlineHelpText>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Content</fullName>
            </value>
            <value>
                <fullName>eRepublic Content</fullName>
            </value>
            <value>
                <fullName>Marketing Content</fullName>
            </value>
            <value>
                <fullName>Custom Research Report</fullName>
                <isActive>false</isActive>
                <label>Custom Research Report</label>
            </value>
            <value>
                <fullName>DC Paper</fullName>
                <isActive>false</isActive>
                <label>DC Paper</label>
            </value>
            <value>
                <fullName>Grants Handbook</fullName>
                <isActive>false</isActive>
                <label>Grants Handbook</label>
            </value>
            <value>
                <fullName>Handbook</fullName>
                <isActive>false</isActive>
                <label>Handbook</label>
            </value>
            <value>
                <fullName>How-To-Guide</fullName>
                <isActive>false</isActive>
                <label>How-To-Guide</label>
            </value>
            <value>
                <fullName>Issue Brief</fullName>
                <isActive>false</isActive>
                <label>Issue Brief</label>
            </value>
            <value>
                <fullName>Issue Brief?</fullName>
                <isActive>false</isActive>
                <label>Issue Brief?</label>
            </value>
            <value>
                <fullName>Special Report</fullName>
                <isActive>false</isActive>
                <label>Special Report</label>
            </value>
            <value>
                <fullName>Survey &amp; Lead Report</fullName>
                <isActive>false</isActive>
                <label>Survey &amp; Lead Report</label>
            </value>
            <value>
                <fullName>TLP</fullName>
                <isActive>false</isActive>
                <label>TLP</label>
            </value>
            <value>
                <fullName>White Paper</fullName>
                <isActive>false</isActive>
                <label>White Paper</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>