force-app/main/default/objects/Paper__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description
  >Primary Brand for this paper.  Populates from OneForm.</description>
    <inlineHelpText
  >Primary Brand for this paper.  Populates from OneForm.</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GOVERNING</fullName>
            </value>
            <value>
                <fullName>GOVTECH</fullName>
            </value>
            <value>
                <fullName>PCIO</fullName>
            </value>
            <value>
                <fullName>CDE</fullName>
            </value>
            <value>
                <fullName>CDG</fullName>
            </value>
            <value>
                <fullName>EMERGENCYMGMT</fullName>
            </value>
            <value>
                <fullName>EREPUBLIC</fullName>
            </value>
            <value>
                <fullName>DIGITAL_COMMUNITIES</fullName>
            </value>
            <value>
                <fullName>FUTURE_STRUCTURE</fullName>
            </value>
            <value>
                <fullName>TECHWIRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>