force-app/main/default/objects/Paper__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The client sponsoring this asset.</description>
    <inlineHelpText>The client sponsoring this asset.</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Papers</relationshipLabel>
    <relationshipName>Papers</relationshipName>
    <type>Lookup</type>
</CustomField>