force-app/main/default/objects/Paper__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <description
  >Percentage of Qualified Leads out of the Lead Guarantee</description>
    <formula
  >IF(Lead_Guarantee__c = 0, 1, Qualified_Leads__c / Lead_Guarantee__c )


/* Formerly:

Qualified_Leads__c / Lead_Guarantee__c

Was resulting in #ERROR! in reports when Lead Guarantee was 0

-Jeff Fahndrich, 9/28/2023

*/</formula>
    <label>% Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>