force-app/main/default/objects/Paper__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contract that came in for this paper.</description>
    <inlineHelpText>The contract that came in for this paper.</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Papers</relationshipLabel>
    <relationshipName>Papers</relationshipName>
    <type>Lookup</type>
</CustomField>