force-app/main/default/objects/Paper__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description
  >The date that we are obligated to have delivered the leads in full by according to the contract.</description>
    <inlineHelpText
  >The date that we are obligated to have delivered the leads in full by according to the contract.</inlineHelpText>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>