force-app/main/default/objects/Paper__c/fields/CPL__c.field-meta.xml
<CustomField>
    <fullName>CPL__c</fullName>
    <description>Cost per Lead</description>
    <inlineHelpText>Cost per Lead</inlineHelpText>
    <label>CPL</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>