force-app/main/default/objects/Paper__c/fields/Date_Up__c.field-meta.xml
<CustomField>
    <fullName>Date_Up__c</fullName>
    <description>Date the asset was posted to Clickability.</description>
    <inlineHelpText
  >Date the asset was posted to Clickability. (Automatic from OneForm.)</inlineHelpText>
    <label>Date Up</label>
    <type>Date</type>
</CustomField>