force-app/main/default/objects/Paper__c/fields/Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Method__c</fullName>
    <description
  >Specify the method that lead reports will be delivered to the client.</description>
    <inlineHelpText
  >Specify the method that lead reports will be delivered to the client.</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
            <value>
                <fullName>Data Pass</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>