force-app/main/default/objects/Paper__c/fields/Lead_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Lead_Guarantee__c</fullName>
    <description
  >Number of Leads guaranteed to be delivered to the client.</description>
    <inlineHelpText
  >Number of Leads guaranteed to be delivered to the client. (Must edit in OneForm.)</inlineHelpText>
    <label>Lead Guarantee</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>