force-app/main/default/objects/Paper__c/fields/Newsletter_Options__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Options__c</fullName>
    <label>Newsletter Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>GOV</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>HE</fullName>
            </value>
            <value>
                <fullName>K12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>