force-app/main/default/objects/Paper__c/fields/No_of_Web_Vendor_Leads__c.field-meta.xml
<CustomField>
    <fullName>No_of_Web_Vendor_Leads__c</fullName>
    <description
  >The number of Web Vendor Leads that have been delivered from this paper.</description>
    <inlineHelpText
  >The number of Web Vendor Leads that have been delivered from this paper.</inlineHelpText>
    <label>No of Web Vendor Leads</label>
    <summaryFilterItems>
        <field>Paper_Download__c.Promo_Code__c</field>
        <operation>equals</operation>
        <value>7KnotsDigital</value>
    </summaryFilterItems>
    <summaryForeignKey>Paper_Download__c.Paper__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>