force-app/main/default/objects/Paper__c/fields/OneForm_ID__c.field-meta.xml
<CustomField>
    <fullName>OneForm_ID__c</fullName>
    <description
  >Product ID from OneForm system.  Used to generate link back to OneForm.</description>
    <inlineHelpText
  >Product ID from OneForm system.  Used to generate link back to OneForm.</inlineHelpText>
    <label>OneForm ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>