force-app/main/default/objects/Paper__c/fields/Paper_Owner__c.field-meta.xml
<CustomField>
    <fullName>Paper_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Paper Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Papers</relationshipName>
    <type>Lookup</type>
</CustomField>