force-app/main/default/objects/Paper__c/fields/Qualified_Leads__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Leads__c</fullName>
    <description
  >Total Downloads, minus the downloads that are marked as Non-Qualified.</description>
    <inlineHelpText
  >Total Downloads, minus the downloads that are marked as Non-Qualified.</inlineHelpText>
    <label>Qualified Leads</label>
    <summaryFilterItems>
        <field>Paper_Download__c.Non_Qual__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Paper_Download__c.Paper__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>