force-app/main/default/objects/Paper__c/fields/Qualifiers__c.field-meta.xml
<CustomField>
    <fullName>Qualifiers__c</fullName>
    <label>Qualifiers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>