force-app/main/default/objects/Paper__c/fields/Queue_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Queue_Conversion_Rate__c</fullName>
    <description
  >The amount of users who see the item vs. the amount of users who</description>
    <label>Queue Conversion Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>