force-app/main/default/objects/Paper__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <description>Amount that this asset was sold for.</description>
    <inlineHelpText>Amount that this asset was sold for.</inlineHelpText>
    <label>Sales Price</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>