force-app/main/default/objects/Paper__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText
  >Active - Actively promoting the asset on our website and forms.
Completed - Asset is still hosted on our website and forms, but is not actively being promoted.
Removed - Asset has been removed from website.

Status updated automatically from OneForm.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>