force-app/main/default/objects/Paper__c/fields/Telemarketing_Requested__c.field-meta.xml
<CustomField>
    <fullName>Telemarketing_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This field is used to request that telemarketing is done to complete the lead guarantee on this paper.</description>
    <inlineHelpText
  >This field is used to request that telemarketing is done to complete the lead guarantee on this paper.</inlineHelpText>
    <label>Telemarketing Requested</label>
    <type>Checkbox</type>
</CustomField>