force-app/main/default/objects/Paper__c/fields/Total_Downloads__c.field-meta.xml
<CustomField>
    <fullName>Total_Downloads__c</fullName>
    <description
  >The total number of downloads for this paper, including non-qualified downloaders and ones rejected by the client.</description>
    <inlineHelpText
  >The total number of downloads for this paper, including non-qualified downloaders and ones rejected by the client.</inlineHelpText>
    <label>Total Downloads</label>
    <summaryForeignKey>Paper_Download__c.Paper__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>