force-app/main/default/objects/Paper__c/recordTypes/Paper.recordType-meta.xml
<RecordType>
    <fullName>Paper</fullName>
    <active>true</active>
    <description
  >Standard Paper - Sponsored Papers, Reports (for Govt Audience)</description>
    <label>Paper</label>
</RecordType>