force-app/main/default/objects/Paper__c/listViews/Active_Papers.listView-meta.xml
<ListView>
    <fullName>Active_Papers</fullName>
    <columns>NAME</columns>
    <columns>Asset_Title__c</columns>
    <columns>Date_Up__c</columns>
    <columns>Qualifiers__c</columns>
    <columns>Qualified_Leads__c</columns>
    <columns>Lead_Guarantee__c</columns>
    <columns>Completed__c</columns>
    <columns>Newsletter_Options__c</columns>
    <columns>Paper_Owner__c</columns>
    <columns>Client__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Asset_Type__c</field>
        <operation>equals</operation>
        <value>Client Content,eRepublic Content</value>
    </filters>
    <label>Active Papers</label>
</ListView>