force-app/main/default/objects/Paper__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Date_Up__c</columns>
    <columns>Lead_Guarantee__c</columns>
    <columns>Qualified_Leads__c</columns>
    <columns>Total_Downloads__c</columns>
    <columns>Asset_Title__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Queue_Conversion_Rate__c</columns>
    <columns>No_of_Web_Vendor_Leads__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>