force-app/main/default/objects/Paper__c/listViews/HubSpot_Leads.listView-meta.xml
<ListView>
    <fullName>HubSpot_Leads</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>HubSpot Leads</label>
</ListView>