force-app/main/default/objects/Paper__c/listViews/Marketing_Papers.listView-meta.xml
<ListView>
    <fullName>Marketing_Papers</fullName>
    <columns>NAME</columns>
    <columns>Asset_Title__c</columns>
    <columns>Date_Up__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Total_Downloads__c</columns>
    <columns>Qualified_Leads__c</columns>
    <columns>Lead_Guarantee__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asset_Type__c</field>
        <operation>equals</operation>
        <value>Marketing Content</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active,Completed</value>
    </filters>
    <label>Marketing Papers</label>
</ListView>